TERP proj/force-app/main/default/objects/Contract/fields/Child_Contract_Created__c.field-meta.xml
<CustomField>
    <fullName>Child_Contract_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child Contract Created?</label>
    <type>Checkbox</type>
</CustomField>