TERP proj/force-app/main/default/objects/Contract/fields/Contract_Remaining_Days__c.field-meta.xml
<CustomField>
    <fullName>Contract_Remaining_Days__c</fullName>
    <formula>EndDate -  TODAY()</formula>
    <label>Contract Remaining Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>